--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
   "type": "contao-bundle",
   "description": "The batch processing brick of the Contao GIS-kit con4gis.",
   "keywords": ["con4gis", "queue", "c4g", "QueueBundle", "Stack", "batch", "processing"],
-  "license": "LGPL-3.0+",
+  "license": "LGPL-3.0-or-later",
   "authors": [
     {
       "name": "Kuestenschmiede GmbH Software & Design",
