--- a/composer.json
+++ b/composer.json
@@ -22,8 +22,9 @@
     "issues": "https://github.com/Kuestenschmiede/QueueBundle/issues"
   },
   "require": {
+    "php": "^7.4 || ^8.0",
     "contao/core-bundle": "^4.9",
-    "con4gis/core": "^6.0.0"
+    "con4gis/core": "^6.0.3"
   },
   "conflict": {
     "contao/core": "*",
