--- a/composer.json
+++ b/composer.json
@@ -23,8 +23,7 @@
   },
   "require": {
     "php": "^7.4 || ^8.0",
-    "contao/core-bundle": "^4.9",
-    "con4gis/core": "^6.0.16"
+    "con4gis/core": "^6.0 || ^7.0"
   },
   "conflict": {
     "contao/core": "*",
